examples/01-clean-code-arch-simple/src/domain/orders/errors/invalid-order-status-error.ts
export class InvalidOrderStatusError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidOrderStatusError";
  }
}
